--- a/assets/css/sneedsCustom.css
+++ b/assets/css/sneedsCustom.css
@@ -21,6 +21,14 @@ body {
     direction: rtl !important;
 }
 
+.rtl {
+    direction: rtl !important;
+}
+
+.topSpace {
+    margin-top: 10px;
+}
+
 .yekanFont {
     font-family: yekan;
 }
@@ -80,6 +88,10 @@ body {
     border-radius: 2px;
 }
 
+.w-100 {
+    width: 100%;
+}
+
 .customHover:hover {
     background-color: #9c27b0 !important;
     color: white !important;
@@ -94,4 +106,8 @@ body {
 
 .customCard:hover {
     border: 1px solid gray;
+}
+
+#sneedsAdvancedSearchModal button.btn-info {
+    margin-right: 10px;
 }
