--- a/assets/css/sneedsCustom.css
+++ b/assets/css/sneedsCustom.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: yekan;
-    src: url("../font/BYekan.ttf");
+    src: url("../font/Yekan.ttf");
 }
 
 @font-face {
@@ -25,20 +25,28 @@ body {
     direction: rtl !important;
 }
 
+.d-block{
+    display:block !important;
+}
+
+.clearfix{
+    clear:both;
+}
+
 .topSpace {
     margin-top: 10px;
 }
 
 .yekanFont {
-    font-family: yekan;
+    font-family: yekan !important;
 }
 
 .gadugiFont {
-    font-family: gadugi;
+    font-family: gadugi !important;
 }
 
 .serifFont {
-    font-family: iserif;
+    font-family: iserif !important;
 }
 
 .navbar-brand span.brandName {
@@ -80,7 +88,7 @@ body {
 }
 
 .colorWhite {
-    color: white;
+    color: white !important;
 }
 
 .customHover {
@@ -118,4 +126,27 @@ body {
 
 #sneedsAdvancedSearchModal button.btn-info {
     margin-right: 10px;
+}
+
+.goUpBtn{
+    transition:all 0.3s ease-in-out;
+}
+
+.goUpBtn:hover{
+    background-color:#9c27b0 !important;
+}
+.customHoverButton{
+    transition:all 0.3s ease-in-out;
+    font-size:18px;
+}
+.customHoverButton:hover{
+    opacity:0.8;
+}
+
+ul.nav li a{
+    font-size:17px !important;
+}
+
+.normalFontSize{
+    font-size:17px;
 }
