adding auth page for user/cafe's login and (usersOnly) registration

--- a/assets/css/sneedsCustom.css
+++ b/assets/css/sneedsCustom.css
@@ -180,3 +180,7 @@ ul.nav li a {
 .activeLinkOldBgColor {
     background-color: rgba(255, 255, 255, 0.1) !important;
 }
+
+.fixTopMarginForRegister {
+    margin-top: 50px !important;
+}
