user profile created. cafe discounts table added

--- a/assets/css/sneedsCustom.css
+++ b/assets/css/sneedsCustom.css
@@ -185,3 +185,7 @@ ul.nav li a {
 .fixTopMarginForRegister {
     margin-top: 50px !important;
 }
+
+.normalFontSize > button {
+    font-size:17px !important;
+}
